# AIE5

00_AIM_Quicklinks/: README.md
05_Our_First_Agent_with_LangGraph/: Introduction_to_LangGraph_for_Agents_Assignment_Version.ipynb
06_Multi_Agent_with_LangGraph/: Assignment_06.md  Multi_Agent_RAG_LangGraph.ipynb  pyproject.toml
06_Multi_Agent_with_LangGraph/content/data/6b0c4949/: LinkedIn_Post_Draft.txt  LinkedIn_Post_Draft_Dope_Version.txt
06_Multi_Agent_with_LangGraph/content/data/bd5b6cab/: Outline_Linear_Regression_LinkedIn_Post.txt
06_Multi_Agent_with_LangGraph/content/data/c2eea05d/: LinkedIn_Post_Outline_Linear_Regression.txt
07_Synthetic_Data_Generation_and_LangSmith/: Synthetic_Data_Generation_RAGAS_&_LangSmith_Assignment.ipynb  ai_across_years_kg.json
08_Evaluating_RAG_With_Ragas/: Evaluating_Agents_with_Ragas_(2025)_AI_Makerspace.ipynb  Evaluating_RAG_with_Ragas_(2025)_AI_Makerspace.ipynb
09_Finetuning_Embeddings/: Fine_tuning_Embedding_Models_for_RAG_Solution_Notebook.ipynb
09_Finetuning_Embeddings/data_hard/: how-much-do-i-need-for-retirement.html  kg_test_dataset.jsonl  kg_training_dataset.jsonl  kg_val_dataset.jsonl  killing-your-1000-grocery-bill.html  test_dataset.jsonl  the-shockingly-simple-math-behind-early-retirement.html  training_dataset.jsonl  val_dataset.jsonl
10_Finetuning_Reasoning_Model/: AI_Makerspace_Unsloth_GRPO_Training.ipynb
13_Advanced_Retrieval/: Advanced_Retrieval_with_LangChain_Assignment.ipynb  pyproject.toml
14_Open_DeepResearch/: open-deep-research.ipynb
