[project]
name = "06-multi-agent-with-langgraph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.11"
dependencies = [
    "arxiv>=2.1.3",
    "duckduckgo-search==5.3.1b1",
    "jupyter>=1.1.1",
    "langgraph==0.2.14",
    "langchain==0.2.14",
    "langchain-openai==0.1.23",
    "langchain_core==0.2.35",
    "langchain-community==0.2.12",
    "qdrant_client>=1.13.2",
    "pymupdf==1.25.3",
    "tiktoken==0.8.0",    
]
